feat: communication layers + ui improvements
adding usb/ip supports
fixing translations
fixing ack logic
improving look on small screens
adding possibility to lock "advanced" features

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -274,5 +274,233 @@
   "idWithId": "id={id}",
   "xmodem": "XModem",
   "xmodemStatus": "seq={seq} control={control}",
-  "idTitle": "ID"
+  "idTitle": "ID",
+  "protectApp": "Protect App",
+  "setPassword": "Set Password",
+  "enterPassword": "Enter Password",
+  "currentPassword": "Current Password",
+  "incorrectPassword": "Incorrect password",
+  "confirm": "Confirm",
+  "save": "Save",
+  "hostInputLabel": "Host (IP address or hostname)",
+  "portInputLabel": "Port",
+  "invalidHostPort": "Please enter valid host and port",
+  "connectedToIpDevice": "Connected to IP device",
+  "connectedToUsbDevice": "Connected to USB device",
+  "refreshPorts": "Refresh Ports",
+  "noSerialPortsFound": "No serial ports found",
+  "selectSerialPort": "Select Serial Port",
+  "xmodemTitle": "XModem",
+  "emptyState": "—",
+  "filterKey": "Key",
+  "addFilterTitle": "Add filter",
+  "satelliteEmoji": "📡",
+  "puzzleEmoji": "🧩",
+  "security": "Security",
+  "appProtected": "App is protected. Advanced features are hidden.",
+  "disableProtection": "Disable Protection",
+  "password": "Password",
+  "cancel": "Cancel",
+  "connectToIpDevice": "Connect to Meshtastic Device via IP",
+  "connectViaUsb": "Connect via USB",
+  "event": "Event",
+  "defaultChannel": "Default",
+  "rssiDbm": "{value} dBm",
+  "sendingToRadio": "Sending to radio...",
+  "sentToRadio": "Sent to radio",
+  "acknowledgedByReceiver": "Acknowledged by receiver",
+  "acknowledgedByRelay": "Acknowledged by relay node",
+  "notAcknowledgedTimeout": "Not acknowledged (Timeout)",
+  "received": "Received",
+  "packetInfo": "Packet Info:",
+  "nodeName": "Node {name}",
+  "unknownNode": "Node {id} (Unknown)",
+  "deviceConfig": "Device Config",
+  "positionConfig": "Position Config",
+  "powerConfig": "Power Config",
+  "networkConfig": "Network Config",
+  "displayConfig": "Display Config",
+  "loraConfig": "LoRa Config",
+  "bluetoothConfig": "Bluetooth Config",
+  "securityConfig": "Security Config",
+  "mqttConfig": "MQTT Config",
+  "telemetryConfig": "Telemetry Config",
+  "serialConfig": "Serial Config",
+  "storeForwardConfig": "Store & Forward Config",
+  "rangeTestConfig": "Range Test Config",
+  "externalNotificationConfig": "External Notification Config",
+  "audioConfig": "Audio Config",
+  "neighborInfoConfig": "Neighbor Info Config",
+  "remoteHardwareConfig": "Remote Hardware Config",
+  "paxcounterConfig": "Paxcounter Config",
+  "cannedMessageConfig": "Canned Message Config",
+  "ambientLightingConfig": "Ambient Lighting Config",
+  "detectionSensorConfig": "Detection Sensor Config",
+  "dtnOverlayConfig": "DTN Overlay Config",
+  "broadcastAssistConfig": "Broadcast Assist Config",
+  "nodeModConfig": "Node Mod Config",
+  "nodeModAdminConfig": "Node Mod Admin Config",
+  "idleGameConfig": "Idle Game Config",
+  "role": "Role",
+  "serialEnabled": "Serial Enabled",
+  "buttonGpio": "Button GPIO",
+  "buzzerGpio": "Buzzer GPIO",
+  "rebroadcastMode": "Rebroadcast Mode",
+  "nodeInfoBroadcastSecs": "Node Info Broadcast Secs",
+  "doubleTapAsButtonPress": "Double Tap As Button Press",
+  "isManaged": "Is Managed",
+  "disableTripleClick": "Disable Triple Click",
+  "timezone": "Timezone",
+  "ledHeartbeatDisabled": "LED Heartbeat Disabled",
+  "buzzerMode": "Buzzer Mode",
+  "positionBroadcastSecs": "Position Broadcast Secs",
+  "positionBroadcastSmartEnabled": "Position Broadcast Smart Enabled",
+  "fixedPosition": "Fixed Position",
+  "gpsEnabled": "GPS Enabled",
+  "gpsUpdateInterval": "GPS Update Interval",
+  "gpsAttemptTime": "GPS Attempt Time",
+  "positionFlags": "Position Flags",
+  "rxGpio": "RX GPIO",
+  "txGpio": "TX GPIO",
+  "broadcastSmartMinimumDistance": "Broadcast Smart Minimum Distance",
+  "broadcastSmartMinimumIntervalSecs": "Broadcast Smart Minimum Interval Secs",
+  "gpsEnableGpio": "GPS Enable GPIO",
+  "gpsMode": "GPS Mode",
+  "isPowerSaving": "Is Power Saving",
+  "onBatteryShutdownAfterSecs": "On Battery Shutdown After Secs",
+  "adcMultiplierOverride": "ADC Multiplier Override",
+  "waitBluetoothSecs": "Wait Bluetooth Secs",
+  "sdsSecs": "SDS Secs",
+  "lsSecs": "LS Secs",
+  "minWakeSecs": "Min Wake Secs",
+  "deviceBatteryInaAddress": "Device Battery INA Address",
+  "powermonEnables": "Powermon Enables",
+  "wifiEnabled": "WiFi Enabled",
+  "wifiSsid": "WiFi SSID",
+  "screenOnSecs": "Screen On Secs",
+  "autoScreenCarouselSecs": "Auto Screen Carousel Secs",
+  "compassNorthTop": "Compass North Top",
+  "flipScreen": "Flip Screen",
+  "units": "Units",
+  "oled": "OLED",
+  "displayMode": "Display Mode",
+  "headingBold": "Heading Bold",
+  "wakeOnTapOrMotion": "Wake On Tap Or Motion",
+  "compassOrientation": "Compass Orientation",
+  "use12hClock": "Use 12h Clock",
+  "useLongNodeName": "Use Long Node Name",
+  "region": "Region",
+  "modemPreset": "Modem Preset",
+  "hopLimit": "Hop Limit",
+  "txEnabled": "TX Enabled",
+  "txPower": "TX Power",
+  "enabled": "Enabled",
+  "mode": "Mode",
+  "fixedPin": "Fixed PIN",
+  "publicKey": "Public Key",
+  "privateKey": "Private Key",
+  "adminKeys": "Admin Keys",
+  "debugLogApiEnabled": "Debug Log API Enabled",
+  "adminChannelEnabled": "Admin Channel Enabled",
+  "address": "Address",
+  "username": "Username",
+  "encryption": "Encryption",
+  "json": "JSON",
+  "tls": "TLS",
+  "rootTopic": "Root Topic",
+  "proxyToClient": "Proxy to Client",
+  "mapReporting": "Map Reporting",
+  "deviceUpdateInterval": "Device Update Interval",
+  "environmentUpdateInterval": "Environment Update Interval",
+  "environmentMeasurement": "Environment Measurement",
+  "environmentScreen": "Environment Screen",
+  "airQuality": "Air Quality",
+  "airQualityInterval": "Air Quality Interval",
+  "powerMeasurement": "Power Measurement",
+  "powerUpdateInterval": "Power Update Interval",
+  "powerScreen": "Power Screen",
+  "healthMeasurement": "Health Measurement",
+  "healthUpdateInterval": "Health Update Interval",
+  "healthScreen": "Health Screen",
+  "deviceTelemetry": "Device Telemetry",
+  "echo": "Echo",
+  "rxd": "RXD",
+  "txd": "TXD",
+  "baud": "Baud",
+  "timeout": "Timeout",
+  "overrideConsole": "Override Console",
+  "heartbeat": "Heartbeat",
+  "records": "Records",
+  "historyReturnMax": "History Return Max",
+  "historyReturnWindow": "History Return Window",
+  "isServer": "Is Server",
+  "emitControlSignals": "Emit Control Signals",
+  "sender": "Sender",
+  "save": "Save",
+  "clearOnReboot": "Clear on Reboot",
+  "outputMs": "Output MS",
+  "output": "Output",
+  "active": "Active",
+  "alertMessage": "Alert Message",
+  "alertBell": "Alert Bell",
+  "usePwm": "Use PWM",
+  "outputVibra": "Output Vibra",
+  "outputBuzzer": "Output Buzzer",
+  "nagTimeout": "Nag Timeout",
+  "useI2sAsBuzzer": "Use I2S as Buzzer",
+  "codec2Enabled": "Codec2 Enabled",
+  "pttPin": "PTT Pin",
+  "bitrate": "Bitrate",
+  "i2sWs": "I2S WS",
+  "i2sSd": "I2S SD",
+  "i2sDin": "I2S DIN",
+  "i2sSck": "I2S SCK",
+  "updateInterval": "Update Interval",
+  "transmitOverLora": "Transmit Over LoRa",
+  "allowUndefinedPinAccess": "Allow Undefined Pin Access",
+  "paxcounterUpdateInterval": "Paxcounter Update Interval",
+  "wifiThreshold": "WiFi Threshold",
+  "bleThreshold": "BLE Threshold",
+  "rotary1Enabled": "Rotary1 Enabled",
+  "inputBrokerPinA": "Input Broker Pin A",
+  "inputBrokerPinB": "Input Broker Pin B",
+  "inputBrokerPinPress": "Input Broker Pin Press",
+  "upDown1Enabled": "Up/Down 1 Enabled",
+  "allowInputSource": "Allow Input Source",
+  "sendBell": "Send Bell",
+  "ledState": "LED State",
+  "current": "Current",
+  "red": "Red",
+  "green": "Green",
+  "blue": "Blue",
+  "minBroadcastSecs": "Min Broadcast Secs",
+  "stateBroadcastSecs": "State Broadcast Secs",
+  "name": "Name",
+  "monitorPin": "Monitor Pin",
+  "triggerType": "Trigger Type",
+  "usePullup": "Use Pullup",
+  "ttlMinutes": "TTL Minutes",
+  "initialDelayBaseMs": "Initial Delay Base MS",
+  "retryBackoffMs": "Retry Backoff MS",
+  "maxTries": "Max Tries",
+  "degreeThreshold": "Degree Threshold",
+  "dupThreshold": "Dup Threshold",
+  "windowMs": "Window MS",
+  "maxExtraHops": "Max Extra Hops",
+  "jitterMs": "Jitter MS",
+  "airtimeGuard": "Airtime Guard",
+  "textStatus": "Text Status",
+  "emoji": "Emoji",
+  "snifferEnabled": "Sniffer Enabled",
+  "doNotSendPrvOverMqtt": "Do Not Send PRV Over MQTT",
+  "localStatsOverMesh": "Local Stats Over Mesh",
+  "idlegameEnabled": "Idle Game Enabled",
+  "autoResponderEnabled": "Auto Responder Enabled",
+  "autoResponderText": "Auto Responder Text",
+  "autoRedirectMessages": "Auto Redirect Messages",
+  "autoRedirectTarget": "Auto Redirect Target",
+  "telemetryLimiter": "Telemetry Limiter",
+  "positionLimiter": "Position Limiter",
+  "opportunisticFlooding": "Opportunistic Flooding",
+  "idleGameVariant": "Idle Game Variant"
 }
