--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -258,5 +258,247 @@
   "idleGame": "Gra bezczynności",
   "deviceState": "Stan urządzenia",
   "noDeviceState": "Brak stanu urządzenia",
-  "connectToViewState": "Połącz się z urządzeniem, aby zobaczyć jego stan"
+  "connectToViewState": "Połącz się z urządzeniem, aby zobaczyć jego stan",
+  "protectApp": "Chroń aplikację",
+  "setPassword": "Ustaw hasło",
+  "enterPassword": "Wprowadź hasło",
+  "currentPassword": "Obecne hasło",
+  "incorrectPassword": "Nieprawidłowe hasło",
+  "confirm": "Potwierdź",
+  "save": "Zapisz",
+  "hostInputLabel": "Host (adres IP lub nazwa)",
+  "portInputLabel": "Port",
+  "invalidHostPort": "Wprowadź poprawny host i port",
+  "connectedToIpDevice": "Połączono z urządzeniem IP",
+  "connectedToUsbDevice": "Połączono z urządzeniem USB",
+  "refreshPorts": "Odśwież porty",
+  "noSerialPortsFound": "Nie znaleziono portów szeregowych",
+  "selectSerialPort": "Wybierz port szeregowy",
+  "xmodemTitle": "XModem",
+  "emptyState": "—",
+  "filterKey": "Klucz",
+  "addFilterTitle": "Dodaj filtr",
+  "satelliteEmoji": "📡",
+  "puzzleEmoji": "🧩",
+  "appProtected": "Aplikacja chroniona",
+  "disableProtection": "Wyłącz ochronę",
+  "password": "Hasło",
+  "connectToIpDevice": "Połącz z urządzeniem Meshtastic przez IP",
+  "connectViaUsb": "Połącz przez USB",
+  "event": "Zdarzenie",
+  "defaultChannel": "Domyślny",
+  "rssiDbm": "{value} dBm",
+  "sendingToRadio": "Wysyłanie do radia...",
+  "sentToRadio": "Wysłano do radia",
+  "acknowledgedByReceiver": "Potwierdzono przez odbiorcę",
+  "acknowledgedByRelay": "Potwierdzono przez węzeł pośredni",
+  "notAcknowledgedTimeout": "Brak potwierdzenia (Timeout)",
+  "received": "Odebrano",
+  "packetInfo": "Info o pakiecie:",
+  "nodeName": "Węzeł {name}",
+  "unknownNode": "Węzeł {id} (Nieznany)",
+  "notifications": "Powiadomienia",
+  "enableNotifications": "Włącz powiadomienia",
+  "roleWithRole": "Rola: {role}",
+  "knownNodes": "Znane węzły",
+  "notConfigured": "Nie skonfigurowano",
+  "noConfigurationData": "Brak danych konfiguracyjnych",
+  "nodesWithCount": "Węzły ({count})",
+  "messageDetails": "Szczegóły wiadomości",
+  "statusWithStatus": "Status: {status}",
+  "packetIdWithId": "ID pakietu: {id}",
+  "messageInfo": "Info o wiadomości",
+  "sessionKeyRequested": "Zażądano klucza sesji",
+  "stateMissing": "Brak stanu",
+  "idWithId": "ID: {id}",
+  "xmodem": "XModem",
+  "xmodemStatus": "Status XModem",
+  "idTitle": "ID",
+  "deviceConfig": "Konfiguracja urządzenia",
+  "positionConfig": "Konfiguracja pozycji",
+  "powerConfig": "Konfiguracja zasilania",
+  "networkConfig": "Konfiguracja sieci",
+  "displayConfig": "Konfiguracja wyświetlacza",
+  "loraConfig": "Konfiguracja LoRa",
+  "bluetoothConfig": "Konfiguracja Bluetooth",
+  "securityConfig": "Konfiguracja bezpieczeństwa",
+  "mqttConfig": "Konfiguracja MQTT",
+  "telemetryConfig": "Konfiguracja telemetrii",
+  "serialConfig": "Konfiguracja portu szeregowego",
+  "storeForwardConfig": "Konfiguracja Przechowaj i Przekaż",
+  "rangeTestConfig": "Konfiguracja testu zasięgu",
+  "externalNotificationConfig": "Konfiguracja powiadomień zewnętrznych",
+  "audioConfig": "Konfiguracja audio",
+  "neighborInfoConfig": "Konfiguracja informacji o sąsiadach",
+  "remoteHardwareConfig": "Konfiguracja zdalnego sprzętu",
+  "paxcounterConfig": "Konfiguracja licznika osób",
+  "cannedMessageConfig": "Konfiguracja wiadomości szablonowych",
+  "ambientLightingConfig": "Konfiguracja oświetlenia otoczenia",
+  "detectionSensorConfig": "Konfiguracja czujnika wykrywania",
+  "dtnOverlayConfig": "Konfiguracja nakładki DTN",
+  "broadcastAssistConfig": "Konfiguracja asystenta rozgłaszania",
+  "nodeModConfig": "Konfiguracja modyfikacji węzła",
+  "nodeModAdminConfig": "Konfiguracja admina modyfikacji węzła",
+  "idleGameConfig": "Konfiguracja gry bezczynności",
+  "role": "Rola",
+  "serialEnabled": "Port szeregowy włączony",
+  "buttonGpio": "GPIO przycisku",
+  "buzzerGpio": "GPIO brzęczyka",
+  "rebroadcastMode": "Tryb retransmisji",
+  "nodeInfoBroadcastSecs": "Czas rozgłaszania info o węźle (s)",
+  "doubleTapAsButtonPress": "Podwójne stuknięcie jako przycisk",
+  "isManaged": "Zarządzany",
+  "disableTripleClick": "Wyłącz potrójne kliknięcie",
+  "timezone": "Strefa czasowa",
+  "ledHeartbeatDisabled": "Dioda heartbeat wyłączona",
+  "buzzerMode": "Tryb brzęczyka",
+  "positionBroadcastSecs": "Czas rozgłaszania pozycji (s)",
+  "positionBroadcastSmartEnabled": "Inteligentne rozgłaszanie pozycji",
+  "fixedPosition": "Stała pozycja",
+  "gpsEnabled": "GPS włączony",
+  "gpsUpdateInterval": "Interwał aktualizacji GPS",
+  "gpsAttemptTime": "Czas próby GPS",
+  "positionFlags": "Flagi pozycji",
+  "rxGpio": "RX GPIO",
+  "txGpio": "TX GPIO",
+  "broadcastSmartMinimumDistance": "Min. dystans smart rozgłaszania",
+  "broadcastSmartMinimumIntervalSecs": "Min. interwał smart rozgłaszania (s)",
+  "gpsEnableGpio": "GPIO włączenia GPS",
+  "gpsMode": "Tryb GPS",
+  "isPowerSaving": "Oszczędzanie energii",
+  "onBatteryShutdownAfterSecs": "Wyłącz po czasie na baterii (s)",
+  "adcMultiplierOverride": "Nadpisanie mnożnika ADC",
+  "waitBluetoothSecs": "Czekaj na Bluetooth (s)",
+  "sdsSecs": "SDS (s)",
+  "lsSecs": "LS (s)",
+  "minWakeSecs": "Min. czas wybudzenia (s)",
+  "deviceBatteryInaAddress": "Adres INA baterii urządzenia",
+  "powermonEnables": "Włączenia Powermon",
+  "wifiEnabled": "WiFi włączone",
+  "wifiSsid": "SSID WiFi",
+  "screenOnSecs": "Czas włączenia ekranu (s)",
+  "autoScreenCarouselSecs": "Auto karuzela ekranu (s)",
+  "compassNorthTop": "Kompas północ na górze",
+  "flipScreen": "Odwróć ekran",
+  "units": "Jednostki",
+  "oled": "OLED",
+  "displayMode": "Tryb wyświetlania",
+  "headingBold": "Pogrubiony nagłówek",
+  "wakeOnTapOrMotion": "Wybudź przy stuknięciu lub ruchu",
+  "compassOrientation": "Orientacja kompasu",
+  "use12hClock": "Zegar 12h",
+  "useLongNodeName": "Długa nazwa węzła",
+  "region": "Region",
+  "modemPreset": "Preset modemu",
+  "hopLimit": "Limit skoków",
+  "txEnabled": "TX włączone",
+  "txPower": "Moc TX",
+  "enabled": "Włączone",
+  "mode": "Tryb",
+  "fixedPin": "Stały PIN",
+  "publicKey": "Klucz publiczny",
+  "privateKey": "Klucz prywatny",
+  "adminKeys": "Klucze admina",
+  "debugLogApiEnabled": "API logów debugowania",
+  "adminChannelEnabled": "Kanał admina włączony",
+  "address": "Adres",
+  "username": "Nazwa użytkownika",
+  "encryption": "Szyfrowanie",
+  "json": "JSON",
+  "tls": "TLS",
+  "rootTopic": "Temat główny",
+  "proxyToClient": "Proxy do klienta",
+  "mapReporting": "Raportowanie mapy",
+  "deviceUpdateInterval": "Interwał aktualizacji urządzenia",
+  "environmentUpdateInterval": "Interwał aktualizacji środowiska",
+  "environmentMeasurement": "Pomiar środowiska",
+  "environmentScreen": "Ekran środowiska",
+  "airQuality": "Jakość powietrza",
+  "airQualityInterval": "Interwał jakości powietrza",
+  "powerMeasurement": "Pomiar mocy",
+  "powerUpdateInterval": "Interwał aktualizacji mocy",
+  "powerScreen": "Ekran mocy",
+  "healthMeasurement": "Pomiar zdrowia",
+  "healthUpdateInterval": "Interwał aktualizacji zdrowia",
+  "healthScreen": "Ekran zdrowia",
+  "deviceTelemetry": "Telemetria urządzenia",
+  "echo": "Echo",
+  "rxd": "RXD",
+  "txd": "TXD",
+  "baud": "Baud",
+  "timeout": "Timeout",
+  "overrideConsole": "Nadpisz konsolę",
+  "heartbeat": "Heartbeat",
+  "records": "Rekordy",
+  "historyReturnMax": "Max zwrot historii",
+  "historyReturnWindow": "Okno zwrotu historii",
+  "isServer": "Jest serwerem",
+  "emitControlSignals": "Emituj sygnały sterujące",
+  "sender": "Nadawca",
+  "clearOnReboot": "Wyczyść przy restarcie",
+  "outputMs": "Wyjście MS",
+  "output": "Wyjście",
+  "active": "Aktywne",
+  "alertMessage": "Wiadomość alarmowa",
+  "alertBell": "Dzwonek alarmowy",
+  "usePwm": "Użyj PWM",
+  "outputVibra": "Wibracje",
+  "outputBuzzer": "Brzęczyk",
+  "nagTimeout": "Timeout nękania",
+  "useI2sAsBuzzer": "Użyj I2S jako brzęczyka",
+  "codec2Enabled": "Codec2 włączony",
+  "pttPin": "Pin PTT",
+  "bitrate": "Bitrate",
+  "i2sWs": "I2S WS",
+  "i2sSd": "I2S SD",
+  "i2sDin": "I2S DIN",
+  "i2sSck": "I2S SCK",
+  "updateInterval": "Interwał aktualizacji",
+  "transmitOverLora": "Transmisja przez LoRa",
+  "allowUndefinedPinAccess": "Zezwól na dostęp do niezdefiniowanych pinów",
+  "paxcounterUpdateInterval": "Interwał aktualizacji Paxcounter",
+  "wifiThreshold": "Próg WiFi",
+  "bleThreshold": "Próg BLE",
+  "rotary1Enabled": "Rotary1 włączone",
+  "inputBrokerPinA": "Input Broker Pin A",
+  "inputBrokerPinB": "Input Broker Pin B",
+  "inputBrokerPinPress": "Input Broker Pin Press",
+  "upDown1Enabled": "Up/Down 1 włączone",
+  "allowInputSource": "Zezwól na źródło wejścia",
+  "sendBell": "Wyślij dzwonek",
+  "ledState": "Stan LED",
+  "current": "Prąd",
+  "red": "Czerwony",
+  "green": "Zielony",
+  "blue": "Niebieski",
+  "minBroadcastSecs": "Min. czas rozgłaszania (s)",
+  "stateBroadcastSecs": "Czas rozgłaszania stanu (s)",
+  "name": "Nazwa",
+  "monitorPin": "Pin monitorowania",
+  "triggerType": "Typ wyzwalacza",
+  "usePullup": "Użyj Pullup",
+  "ttlMinutes": "TTL (minuty)",
+  "initialDelayBaseMs": "Początkowe opóźnienie bazowe (ms)",
+  "retryBackoffMs": "Backoff ponowienia (ms)",
+  "maxTries": "Maks. prób",
+  "degreeThreshold": "Próg stopnia",
+  "dupThreshold": "Próg duplikatów",
+  "windowMs": "Okno (ms)",
+  "maxExtraHops": "Maks. dodatkowe skoki",
+  "jitterMs": "Jitter (ms)",
+  "airtimeGuard": "Ochrona czasu antenowego",
+  "textStatus": "Status tekstowy",
+  "emoji": "Emoji",
+  "snifferEnabled": "Sniffer włączony",
+  "doNotSendPrvOverMqtt": "Nie wysyłaj PRV przez MQTT",
+  "localStatsOverMesh": "Lokalne statystyki przez Mesh",
+  "idlegameEnabled": "Gra bezczynności włączona",
+  "autoResponderEnabled": "Autoresponder włączony",
+  "autoResponderText": "Tekst autorespondera",
+  "autoRedirectMessages": "Automatyczne przekierowanie wiadomości",
+  "autoRedirectTarget": "Cel przekierowania",
+  "telemetryLimiter": "Limiter telemetrii",
+  "positionLimiter": "Limiter pozycji",
+  "opportunisticFlooding": "Oportunistyczny flooding",
+  "idleGameVariant": "Wariant gry bezczynności"
 }
