feat: tracing and ui fixes
adding missing localizations
telemetry for nodes not devices
tracing functionality

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -502,5 +502,39 @@
   "telemetryLimiter": "Telemetry Limiter",
   "positionLimiter": "Position Limiter",
   "opportunisticFlooding": "Opportunistic Flooding",
-  "idleGameVariant": "Idle Game Variant"
+  "idleGameVariant": "Idle Game Variant",
+
+  "telemetryTitle": "Telemetry",
+  "noTelemetryData": "No telemetry data available",
+  "telemetryBattery": "Battery",
+  "telemetryVoltage": "Voltage",
+  "telemetryChannelUtil": "Channel Util",
+  "telemetryAirUtilTx": "Air Util Tx",
+  "telemetryTemperature": "Temperature",
+  "telemetryHumidity": "Humidity",
+  "telemetryPressure": "Pressure",
+ "telemetryPm25": "PM2.5",
+  "telemetryCo2": "CO2",
+  "telemetryChVoltage": "Ch{channel} Voltage",
+  "telemetryHistory": "History: {count} points",
+
+  "traces": "Traceroutes",
+  "traceRoute": "Trace Route",
+  "startTrace": "Start Trace",
+  "traceTarget": "Target",
+  "tracePending": "Pending",
+  "traceCompleted": "Completed",
+  "traceFailed": "Failed",
+  "traceTimeout": "Timeout",
+  "traceNoHistory": "No traces yet",
+  "traceEvents": "Trace Events",
+  "traceForwardRoute": "Forward Route",
+  "traceReturnRoute": "Return Route",
+  "traceHopCount": "{count, plural, =0{0 hops} =1{1 hop} other{{count} hops}}",
+  "traceShowOnMap": "Show on Map",
+  "traceSelectNode": "Select node to trace",
+  "traceSent": "Trace request sent",
+  "traceToggleVisualization": "Toggle Trace Visualization",
+  "noNodesAvailable": "No nodes available",
+  "refresh": "Refresh"
 }
