--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -500,5 +500,39 @@
   "telemetryLimiter": "Limiter telemetrii",
   "positionLimiter": "Limiter pozycji",
   "opportunisticFlooding": "Oportunistyczny flooding",
-  "idleGameVariant": "Wariant gry bezczynności"
+  "idleGameVariant": "Wariant gry bezczynności",
+
+  "telemetryTitle": "Telemetria",
+  "noTelemetryData": "Brak danych telemetrycznych",
+  "telemetryBattery": "Bateria",
+  "telemetryVoltage": "Napięcie",
+  "telemetryChannelUtil": "Wykorzystanie kanału",
+  "telemetryAirUtilTx": "Wykorzystanie TX",
+  "telemetryTemperature": "Temperatura",
+  "telemetryHumidity": "Wilgotność",
+  "telemetryPressure": "Ciśnienie",
+  "telemetryPm25": "PM2.5",
+  "telemetryCo2": "CO2",
+  "telemetryChVoltage": "Napięcie kan. {channel}",
+  "telemetryHistory": "Historia: {count} punktów",
+
+  "traces": "Śledzenie tras",
+  "traceRoute": "Śledź trasę",
+  "startTrace": "Rozpocznij śledzenie",
+  "traceTarget": "Cel",
+  "tracePending": "W toku",
+  "traceCompleted": "Zakończono",
+  "traceFailed": "Nieudane",
+  "traceTimeout": "Przekroczono czas",
+  "traceNoHistory": "Brak śledzeń",
+  "traceEvents": "Zdarzenia śledzenia",
+  "traceForwardRoute": "Trasa tam",
+  "traceReturnRoute": "Trasa powrotna",
+  "traceHopCount": "{count, plural, =0{0 skoków} =1{1 skok} few{{count} skoki} other{{count} skoków}}",
+  "traceShowOnMap": "Pokaż na mapie",
+  "traceSelectNode": "Wybierz węzeł do śledzenia",
+  "traceSent": "Wysłano żądanie śledzenia",
+  "traceToggleVisualization": "Przełącz wizualizację śledzenia",
+  "noNodesAvailable": "Brak dostępnych węzłów",
+  "refresh": "Odśwież"
 }
