feat: tracing ux improvements

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -544,5 +544,30 @@
   "tracerouteMinInterval": "Traceroute Rate Limit",
   "tracerouteMinIntervalDescription": "Minimum seconds between traceroute requests to the same node. The firmware also enforces rate limits to prevent network congestion.",
   "configTimeout": "Config Download Timeout",
-  "configTimeoutDescription": "Maximum time without activity when downloading device configuration (in seconds)"
+  "configTimeoutDescription": "Maximum time without activity when downloading device configuration (in seconds)",
+  "nodesWithoutLocation": "Nodes without location",
+  "targetNodeNoLocation": "Target node {id} has no location data. Trace line cannot be drawn.",
+  "startLocal": "Start (Local)",
+  "traceTooltip": "Trace",
+  "ackTooltip": "Ack",
+  "localDevice": "Local Device",
+  "deviceMetricsTitle": "Device Metrics",
+  "environmentMetricsTitle": "Environment Metrics",
+  "airQualityMetricsTitle": "Air Quality Metrics",
+  "powerMetricsTitle": "Power Metrics",
+  "localStatsTitle": "Local Stats",
+  "healthMetricsTitle": "Health Metrics",
+  "hostMetricsTitle": "Host Metrics",
+  "errorPrefix": "Error: {error}",
+  "tabBle": "BLE",
+  "tabIp": "IP",
+  "tabUsb": "USB",
+  "tabSim": "Sim",
+  "simulationEnvironment": "Simulation Environment",
+  "simulationDescription": "Connect to a simulated device to test UI components with fake data (nodes, chat, traces, etc).",
+  "startSimulation": "Start Simulation",
+  "connectedToSimulation": "Connected to Simulation Device",
+  "simulationFailed": "Simulation failed: {error}",
+  "statusHistory": "Status History",
+  "sourceNodePrefix": "Source: {name}"
 }
