--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -542,5 +542,30 @@
   "tracerouteMinInterval": "Limit częstotliwości Traceroute",
   "tracerouteMinIntervalDescription": "Minimalna liczba sekund między żądaniami traceroute do tego samego węzła. Firmware również wymusza limity częstotliwości, aby zapobiec przeciążeniu sieci.",
   "configTimeout": "Timeout Pobierania Konfiguracji",
-  "configTimeoutDescription": "Maksymalny czas bez aktywności podczas pobierania konfiguracji urządzenia (w sekundach)"
+  "configTimeoutDescription": "Maksymalny czas bez aktywności podczas pobierania konfiguracji urządzenia (w sekundach)",
+  "nodesWithoutLocation": "Węzły bez lokalizacji",
+  "targetNodeNoLocation": "Węzeł docelowy {id} nie ma danych lokalizacyjnych. Linia śledzenia nie może zostać narysowana.",
+  "startLocal": "Start (Lokalny)",
+  "traceTooltip": "Ślad",
+  "ackTooltip": "Potw.",
+  "localDevice": "Urządzenie Lokalne",
+  "deviceMetricsTitle": "Metryki Urządzenia",
+  "environmentMetricsTitle": "Metryki Środowiskowe",
+  "airQualityMetricsTitle": "Metryki Jakości Powietrza",
+  "powerMetricsTitle": "Metryki Zasilania",
+  "localStatsTitle": "Statystyki Lokalne",
+  "healthMetricsTitle": "Metryki Zdrowia",
+  "hostMetricsTitle": "Metryki Hosta",
+  "errorPrefix": "Błąd: {error}",
+  "tabBle": "BLE",
+  "tabIp": "IP",
+  "tabUsb": "USB",
+  "tabSim": "Sim",
+  "simulationEnvironment": "Środowisko Symulacji",
+  "simulationDescription": "Połącz się z symulowanym urządzeniem, aby przetestować komponenty interfejsu z fałszywymi danymi (węzły, czat, ślady itp.).",
+  "startSimulation": "Rozpocznij Symulację",
+  "connectedToSimulation": "Połączono z Urządzeniem Symulacyjnym",
+  "simulationFailed": "Symulacja nieudana: {error}",
+  "statusHistory": "Historia Statusu",
+  "sourceNodePrefix": "Źródło: {name}"
 }
